[workspace]
members = [
    "crates/use-fs",
    "crates/use-path",
    "crates/use-file-name",
    "crates/use-extension",
    "crates/use-dir",
    "crates/use-file-stem",
]
resolver = "2"

[workspace.package]
authors = ["RustUse Contributors"]
version = "0.0.1"
edition = "2024"
rust-version = "1.95.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/RustUse/use-fs"
homepage = "https://rustuse.org"
documentation = "https://rustuse.org"
readme = "README.md"
publish = false

[workspace.dependencies]
use-fs = { version = "0.0.1", path = "crates/use-fs" }
use-path = { version = "0.0.1", path = "crates/use-path" }
use-file-name = { version = "0.0.1", path = "crates/use-file-name" }
use-extension = { version = "0.0.1", path = "crates/use-extension" }
use-dir = { version = "0.0.1", path = "crates/use-dir" }
use-file-stem = { version = "0.0.1", path = "crates/use-file-stem" }

[workspace.lints.rust]
unsafe_code = "forbid"