[package]
name = "use-file-name"
description = "Practical file-name utility primitives"
publish = true
authors.workspace = true
version.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
rust-version.workspace = true
readme = "README.md"
keywords = ["filename", "file", "filesystem", "sanitize", "utility"]
categories = ["filesystem", "parsing"]

[lints]
workspace = true