[package]
name = "use-file-stem"
description = "Practical file stem utility primitives"
publish = true
authors.workspace = true
version.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
rust-version.workspace = true
readme = "README.md"
keywords = ["stem", "filename", "file", "filesystem", "utility"]
categories = ["filesystem", "parsing"]

[lints]
workspace = true
